<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="10dp">

    <TextView
        android:id="@+id/tv_storyTitle"
        android:text="@string/dummy_title"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="#222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_score"
            android:text="@string/dummy_points"
            style="@style/list_item_subtext"/>


        <TextView
            android:id="@+id/tv_author"
            android:text="@string/dummy_author"
            style="@style/list_item_subtext"/>

        <TextView
            android:id="@+id/tv_time"
            android:text="@string/dummy_time"
            style="@style/list_item_subtext" />

        <TextView
            android:id="@+id/tv_comments"
            android:text="@string/dummy_comments"
            style="@style/list_item_subtext" />
    </LinearLayout>

</LinearLayout>