<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="15dp">

    <TextView
        android:id="@+id/tv_storyTitle"
        android:text="@string/dummy_title"
        android:maxLines="2"
        android:textSize="18sp"
        android:textColor="#222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/author"
                style="@style/news_list_icons" />
            <TextView
                android:id="@+id/tv_author"
                android:text="@string/dummy_author"
                style="@style/list_item_subtext"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/score"
                style="@style/news_list_icons"/>
            <TextView
                android:id="@+id/tv_score"
                android:text="@string/dummy_points"
                style="@style/list_item_subtext"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/time"
                style="@style/news_list_icons"/>
            <TextView
                android:id="@+id/tv_time"
                android:text="@string/dummy_time"
                style="@style/list_item_subtext" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/comment"
                style="@style/news_list_icons" />
            <TextView
                android:id="@+id/tv_comments"
                android:text="@string/dummy_comments"
                style="@style/list_item_subtext" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>