<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="15dp">

    <TextView
        android:id="@+id/space"
        android:text=""
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/author"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_author"
                android:text="@string/dummy_author"
                style="@style/comment_author"/>
            <TextView
                android:text="@string/comment_author_postfix"
                android:textSize="15sp"
                android:gravity="bottom"
                android:textColor="#555"
                style="@style/comment_author"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_commentText"
            android:text="@string/comment_placeholder"
            android:textSize="16sp"
            android:textColor="#222"
            android:maxLines="20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/time"
                    style="@style/news_list_icons"/>
                <TextView
                    android:id="@+id/tv_time"
                    android:text="@string/dummy_time"
                    style="@style/list_item_subtext" />
            </LinearLayout>

            <LinearLayout
                android:gravity=""
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/comment"
                    style="@style/news_list_icons" />
                <TextView
                    android:id="@+id/tv_replies"
                    android:text="@string/dummy_comments"
                    style="@style/list_item_subtext" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>